ecmascript/parser/tests/test262-error-references/fail/08fa65d2ecddcfbe.js.stderr
error: Expected ,, got {
 --> $DIR/tests/test262-parser/fail/08fa65d2ecddcfbe.js:1:13
  |
1 | ({ set: s() { } })
  |             ^

